--- a/web/index.html
+++ b/web/index.html
@@ -183,7 +183,7 @@
   <script src="../assets/js/jquery.min.js"></script>
   <script>
     $.ajax({
-      url: "http://127.0.0.1/Electr-project/FlexStart/FlexStart/api/",
+      url: "http://electrotechsolution.com/api/",
       dataType: "json",
       success: function(data) {
           console.log(data);
